CSCI/Coding5/compiling_error.txt
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp: In constructor 'Player::Player(std::__cxx11::string)':
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:15:11: error: 'SetRole' was not declared in this scope
   role_ = SetRole();
           ^~~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:15:11: note: suggested alternative: 'GetRole'
   role_ = SetRole();
           ^~~~~~~
           GetRole
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp: At global scope:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:42:6: error: no declaration matches 'void Player::SetName()'
 void Player::SetName() {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:42:6: note: no functions named 'void Player::SetName()'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:47:6: error: no declaration matches 'void Player::SetName(std::__cxx11::string)'
 void Player::SetName(string name) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:47:6: note: no functions named 'void Player::SetName(std::__cxx11::string)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:50:6: error: no declaration matches 'void Player::SetRole()'
 void Player::SetRole() {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:50:6: note: no functions named 'void Player::SetRole()'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:81:6: error: no declaration matches 'void Player::SetAttributes(std::__cxx11::string, int, int, int, int, int, int, int, int)'
 void Player::SetAttributes(string role, int level = 0, int experience = 0,
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:81:6: note: no functions named 'void Player::SetAttributes(std::__cxx11::string, int, int, int, int, int, int, int, int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:94:6: error: no declaration matches 'void Player::SetLevel(int)'
 void Player::SetLevel(int level) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:94:6: note: no functions named 'void Player::SetLevel(int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:98:6: error: no declaration matches 'void Player::SetExp(int)'
 void Player::SetExp(int exp) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:98:6: note: no functions named 'void Player::SetExp(int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:102:6: error: no declaration matches 'void Player::SetHealth(int)'
 void Player::SetHealth(int health) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:102:6: note: no functions named 'void Player::SetHealth(int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:106:6: error: no declaration matches 'void Player::SetAttack(int)'
 void Player::SetAttack(int attack) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:106:6: note: no functions named 'void Player::SetAttack(int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:110:6: error: no declaration matches 'void Player::SetArmor(int)'
 void Player::SetArmor(int armor) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:110:6: note: no functions named 'void Player::SetArmor(int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:114:6: error: no declaration matches 'void Player::SetDexterity(int)'
 void Player::SetDexterity(int dexterity) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:114:6: note: no functions named 'void Player::SetDexterity(int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:118:6: error: no declaration matches 'void Player::SetIntelligence(int)'
 void Player::SetIntelligence(int intelligence) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:118:6: note: no functions named 'void Player::SetIntelligence(int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:122:6: error: no declaration matches 'void Player::SetSpeed(int)'
 void Player::SetSpeed(int speed) {
      ^~~~~~
C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:122:6: note: no functions named 'void Player::SetSpeed(int)'
In file included from C:\Users\Thinkpad\github\CSCI\Coding5\Player.cpp:1:
C:\Users\Thinkpad\github\CSCI\Coding5\Player.h:12:7: note: 'class Player' defined here
 class Player {
       ^~~~~~
